--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://unsplash.com/photos/2fyeLhUeYpg/600x800");
+  background: url("https://unsplash.com/photos/2fyeLhUeYpg");
   background-position: center;
   background-size: cover;
 }
