--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("..//img/login.jpg");
+  background: url("img/login.jpg");
   background-position: center;
   background-size: cover;
 }
