--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10584,7 +10584,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://i.ibb.co/B6d8MSY/descarga.jpg");
+  background: url("https://i.ibb.co/6n09WXD/login2.png");
   background-position: center;
   background-size: cover;
 }
